--- a/public/css/platform.css
+++ b/public/css/platform.css
@@ -631,7 +631,6 @@ body {
     font-size: 14px;
     color: #A1A1AA;
     line-height: 1.6;
-    width: 400px;
 }
 
 .synergy-number {
@@ -639,6 +638,10 @@ body {
     grid-template-columns: repeat(3, 1fr);
     gap: 20px;
     margin-top: 40px;
+}
+
+.carousell-image{
+    height:500px;
 }
 
 .number-item {
@@ -1712,5 +1715,9 @@ select.form-input option {
 
     .potential-content-section{
         width: auto;
+    }
+
+    .carousell-image{
+        height:auto;
     }
 }
