--- a/public/css/portfolio-funding-show.css
+++ b/public/css/portfolio-funding-show.css
@@ -405,41 +405,39 @@ body {
     margin: 0;
 }
 
+
+
+
+.hero-mid-section {
+    color: #ffffff;
+    text-align: center;
+    position: relative;
+    margin-bottom: 110px;
+    padding-top: 40px;
+}
+
+.center-text {
+    position: relative;
+    font-family: var(--font-family);
+    color: #ffffff;
+    font-size: 56px;
+    font-weight: 350;
+    text-align: center;
+    margin-left: 90px;
+    margin-right: 90px;
+}
+
+
+.investors-image{
+    height: 80px;
+}
+
+.investors-imagempf{
+    height: 100px;
+}
+
+
 /* Responsive Design */
-@media (max-width: 1200px) {
-    .content-container {
-        grid-template-columns: 250px 1fr;
-        gap: 30px;
-        background: transparent;
-    }
-
-}
-
-@media (max-width: 992px) {
-
-    .content-container {
-        grid-template-columns: 1fr;
-        gap: 40px;
-        background: transparent;
-    }
-
-    .social-icons {
-        flex-direction: row;
-        background: transparent;
-    }
-
-    .article-meta {
-        gap: 16px;
-        background: transparent;
-    }
-
-    .meta-info {
-        flex-direction: row;
-        align-items: center;
-        flex-wrap: wrap;
-        background: transparent;
-    }
-}
 
 @media (max-width: 768px) {
     .hero-section {
@@ -482,63 +480,10 @@ body {
     .sidebar-left {
         padding-left: 0;
     }
-}
 
-@media (max-width: 480px) {
-    .content-section {
-        padding: 20px;
-        background: transparent;
+    .center-text{
+        width: 80%;
+        font-size: 40px;
+        margin: 0 auto;
     }
-
-    .article-meta h1 {
-        font-size: 24px;
-    }
-
-    .meta-info {
-        gap: 8px;
-        background: transparent;
-    }
-
-    .newsletter-section {
-        padding: 40px 20px;
-        background-color: #1F2937;
-    }
-
-    .newsletter-title {
-        font-size: 24px;
-        background: transparent;
-    }
-
-    .hero-content {
-        min-height: 250px;
-    }
-}
-
-
-.hero-mid-section {
-    color: #ffffff;
-    text-align: center;
-    position: relative;
-    margin-bottom: 110px;
-    padding-top: 40px;
-}
-
-.center-text {
-    position: relative;
-    font-family: var(--font-family);
-    color: #ffffff;
-    font-size: 56px;
-    font-weight: 350;
-    text-align: center;
-    margin-left: 90px;
-    margin-right: 90px;
-}
-
-
-.investors-image{
-    height: 80px;
-}
-
-.investors-imagempf{
-    height: 100px;
 }
