--- a/public/css/media-show.css
+++ b/public/css/media-show.css
@@ -208,15 +208,22 @@ body {
     border: none;
 }
 
+.nav-button a{
+    text-decoration: none;
+}
+
 .nav-button span {
     font-size: 12px;
     color: #ffffff;
     letter-spacing: 0.5px;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
     gap: 5px;
+    font-family: var(--font-family);
+    text-decoration: none;
 }
+
 
 
 .nav-button.prev-button span i {
